# CFDbasics

./: LICENSE.txt  README.md
01_waveSolver/: CMakeLists.txt
01_waveSolver/include/: waveSolver1d.hpp
01_waveSolver/run/: wavePlot.py
01_waveSolver/src/: waveSolver1d.cpp
02_inviscidBurgersSolver/: CMakeLists.txt
02_inviscidBurgersSolver/include/: inviscidBurgersSolver.hpp
02_inviscidBurgersSolver/src/: inviscidBurgersSolver.cpp
02_shockTube/include/: ShockTubeSolver.hpp
02_shockTube/run/: Sod_ShockTube.py  shockPlot.py
03_heatDiffuion2d/: CMakeLists.txt  README.md
03_heatDiffuion2d/driver/: main.cpp
03_heatDiffuion2d/gmsh_data/: quad.geo  quad.msh  quad.su2  quad.vtk
03_heatDiffuion2d/heatdiffusion2d/inc/: HeatDiffusion2d.hpp
03_heatDiffuion2d/heatdiffusion2d/src/: HeatDiffusion2d.cpp
03_heatDiffuion2d/mesh/inc/: CellQuad4.hpp  Face2d.hpp  Node2d.hpp  SU2meshparser.hpp  Variable.hpp
03_heatDiffuion2d/mesh/src/: CellQuad4.cpp  Face2d.cpp  Node2d.cpp  SU2meshparser.cpp  Variable.cpp
03_shockTube/: CMakeLists.txt  README.md  shocktube.code-workspace
03_shockTube/include/: ShockTubeSolver.hpp
03_shockTube/run/: Sod_ShockTube.py  shockPlot.py  shockTube
03_shockTube/src/: ShockTubeSolver.cpp
05_BoundaryLayer_RANS/: CMakeLists.txt  README.md
05_BoundaryLayer_RANS/inc/: BoundaryLayerRansSolver.hpp
05_BoundaryLayer_RANS/src/: BoundaryLayerRansSolver.cpp
06_LidDriven/: CMakeLists.txt
06_LidDriven/inc/: LidDrivenCavity.hpp
06_LidDriven/src/: LidDrivenCavity.cpp
20_LinearAlgebra/: Simultaneous_linear_equations.py
50_su2mesh/: CMakeLists.txt  README.md
50_su2mesh/driver/: main.cpp
50_su2mesh/inc/: Face2d.hpp
50_su2mesh/meshdata/: quad.geo  quad.msh
50_su2mesh/src/: CellQuad4.cpp  Node2d.cpp  SU2meshparser.cpp
61_Tomas-Moeller/: CMakeLists.txt  README.md
61_Tomas-Moeller/inc/: TomasMoeller.hpp
61_Tomas-Moeller/src/: TomasMoeller.cpp
